# name: TestPreviewList.test_feature_previews
  '
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '
---
# name: TestPreviewList.test_feature_previews.1
  '
  SELECT "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id"
  FROM "posthog_featureflag"
  WHERE ("posthog_featureflag"."active"
         AND NOT "posthog_featureflag"."deleted"
         AND "posthog_featureflag"."team_id" = 2)
  '
---
# name: TestPreviewList.test_feature_previews.2
  '
  SELECT "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id"
  FROM "posthog_featureflag"
  WHERE ("posthog_featureflag"."active"
         AND NOT "posthog_featureflag"."deleted"
         AND "posthog_featureflag"."team_id" = 2)
  '
---
# name: TestPreviewList.test_feature_previews.3
  '
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."email_opt_in",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."is_email_verified",
         "posthog_user"."events_column_config"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21
  '
---
# name: TestPreviewList.test_feature_previews.4
  '
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days"
  FROM "posthog_team"
  WHERE "posthog_team"."api_token" = 'token123'
  LIMIT 21 /*controller='posthog.api.beta_management.feature_previews',route='%5Eapi/feature_previews/%3F%28%3F%3A%5B%3F%23%5D.%2A%29%3F%24'*/
  '
---
# name: TestPreviewList.test_feature_previews.5
  '
  SELECT "posthog_betamanagement"."id",
         "posthog_betamanagement"."team_id",
         "posthog_betamanagement"."feature_flag_id",
         "posthog_betamanagement"."name",
         "posthog_betamanagement"."description",
         "posthog_betamanagement"."stage",
         "posthog_betamanagement"."documentation_url",
         "posthog_betamanagement"."created_at",
         "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id"
  FROM "posthog_betamanagement"
  LEFT OUTER JOIN "posthog_featureflag" ON ("posthog_betamanagement"."feature_flag_id" = "posthog_featureflag"."id")
  WHERE ("posthog_betamanagement"."team_id" = 2
         AND NOT ("posthog_betamanagement"."stage" = 'general-availability')) /*controller='posthog.api.beta_management.feature_previews',route='%5Eapi/feature_previews/%3F%28%3F%3A%5B%3F%23%5D.%2A%29%3F%24'*/
  '
---
